--- a/ex-animations/style.css
+++ b/ex-animations/style.css
@@ -10,7 +10,6 @@
     background-color: red;    
 }
 
-
 /*secondo effetto*/
 .ex-2-square {
     width: 100px;
@@ -21,19 +20,35 @@
 /*rettangolo*/
 .ex-2-square:active {
     width: 900px;
-
 }
 
+/*terzo effetto*/
 .ex-3-square {
     width: 100px;
     height: 100px;
     background: red;
+    border-radius: 0%;
+    transition: border-radius 2s;
 }
+/* hover cerchio*/
+.ex-3-square:hover {
+    border-radius: 50%;
+}
+
+/*quarto effetto*/
 .ex-4-square {
     width: 100px;
     height: 100px;
     background: red;
+    opacity: 1;
+    transition: opacity 3s;
+    
 }
+/*scomparsa*/
+.ex-4-square:hover {
+    opacity: 0;
+}
+
 .ex-5-square {
     margin: 20px;
     width: 60px;
