--- a/ex-animations/style.css
+++ b/ex-animations/style.css
@@ -19,7 +19,7 @@
 }
 /*rettangolo*/
 .ex-2-square:active {
-    width: 900px;
+    width: 1100px;
 }
 
 /*terzo effetto*/
@@ -119,6 +119,7 @@
     animation-name: spin;
     animation-iteration-count: infinite;
     animation-duration: 1s;
+    animation-timing-function: linear;
 }
 /*icona gira*/
 @keyframes spin {
@@ -130,8 +131,24 @@
     }
     
 }
+/*icona gira fino a 3/4 all'hover*/
 .ex-11-icon {
-    font-size: 60px;
+    font-size: 60px;    
+    transition: all 1s;
+    animation-timing-function: linear;
+}
+@keyframes gira {
+    from{
+        transform: rotate(0deg) ;
+    }
+    to{
+        transform:rotate(270deg);
+    }    
+}
+.ex-11-icon:hover{
+    animation-name: gira;
+    animation-duration: 0.9s;
+    animation-iteration-count: infinite;
 }
 .ex-12-button, .ex-13-button {
     position: relative;
@@ -150,7 +167,7 @@
     position: absolute;
     top: -10px;
     left: 10%;
-    background: #f5f5f5;
+    background: /*#f5f5f5*/ red;
     width: 60px;
     height: 20px;
 }
@@ -162,3 +179,68 @@
     width: 60px;
     height: 20px;
 }
+/*spostamento lineare*/
+.ex-12-button:hover .ex-12-top-white {
+    animation: sopra 2s linear;
+    animation-iteration-count: infinite;
+}
+@keyframes sopra {
+    from {
+        left: 10%;
+    }
+    50% {
+        left: calc(100% - 60px);
+    }
+    to {
+        left: 10%;
+    }
+}
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: sotto 2s linear;
+    animation-iteration-count: infinite;
+}
+@keyframes sotto {
+    0% {
+        right: 20%;
+    }
+    50% {
+        right: calc(100% - 60px);
+    }
+    100% {
+        right: 20%;
+    }
+}
+
+/*giro completo*/
+.ex-13-button:hover .ex-13-top-white{
+    animation: girosopra 4s linear;
+    animation-iteration-count: infinite;
+
+}
+@keyframes girosopra {
+    0%{
+        top: -10px;
+        left: 10%;
+    }
+    25%{
+        top: -10px;
+        left: calc(100% - 30px);       
+    }
+    40%{
+        top: 100%;
+        left:calc(100% - 30px);    
+    }
+    60%{
+        top:100%
+        left:calc(100% - 30px); 
+    }
+    75%{
+        top:100%
+        left:(100% - 10px);
+
+    }
+    100%{
+        top: -10px;
+        left: 10%
+    }
+    
