--- a/ex-animations/style.css
+++ b/ex-animations/style.css
@@ -167,7 +167,7 @@
     position: absolute;
     top: -10px;
     left: 10%;
-    background: /*#f5f5f5*/ red;
+    background: #f5f5f5;
     width: 60px;
     height: 20px;
 }
@@ -213,7 +213,7 @@
 
 /*giro completo*/
 .ex-13-button:hover .ex-13-top-white{
-    animation: girosopra 4s linear;
+    animation: girosopra 2s linear;
     animation-iteration-count: infinite;
 
 }
@@ -222,25 +222,32 @@
         top: -10px;
         left: 10%;
     }
-    25%{
+    10%{
         top: -10px;
         left: calc(100% - 30px);       
     }
-    40%{
-        top: 100%;
+    20%{
+        top: calc(100% - 10px);
         left:calc(100% - 30px);    
     }
-    60%{
-        top:100%
+    30%{
+        top: calc(100% - 10px);
         left:calc(100% - 30px); 
     }
-    75%{
-        top:100%
-        left:(100% - 10px);
+    45%{
+        top:calc(100% - 10px);
+        left:(100% - 60px);
 
     }
-    100%{
-        top: -10px;
-        left: 10%
+    65%{
+        top: calc(100% - 10px);
+        left: -30px;
     }
-    
+    85%{
+        top:-10px;
+        left: -30px;
+    }
+    100% {
+        top: -10px;
+        left: 10%;
+    }
