--- a/ex-animations/style.css
+++ b/ex-animations/style.css
@@ -175,7 +175,7 @@
     position: absolute;
     bottom: -10px;
     right: 20%;
-    background: #f5f5f5;
+    background: #f5f5f5; ;
     width: 60px;
     height: 20px;
 }
@@ -222,32 +222,59 @@
         top: -10px;
         left: 10%;
     }
-    10%{
+    20%{
         top: -10px;
         left: calc(100% - 30px);       
     }
-    20%{
+    40%{
         top: calc(100% - 10px);
         left:calc(100% - 30px);    
     }
-    30%{
+    60%{
         top: calc(100% - 10px);
-        left:calc(100% - 30px); 
+        left:-30px; 
     }
-    45%{
-        top:calc(100% - 10px);
-        left:(100% - 60px);
-
-    }
-    65%{
-        top: calc(100% - 10px);
-        left: -30px;
-    }
-    85%{
+    80%{
         top:-10px;
-        left: -30px;
+        left:-30px;
     }
-    100% {
+        100% {
         top: -10px;
         left: 10%;
     }
+    
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+    animation: girosotto 2s linear;
+    animation-iteration-count: infinite;
+    
+}
+@keyframes girosotto {
+    0%{
+        bottom: -10px;
+        right: 20%;
+    }
+    20%{
+        bottom: -10px;
+        right: calc(100% - 30px);       
+    }
+    40%{
+        bottom: calc(100% - 10px);
+        right: calc(100% - 30px); 
+    }
+    60%{
+        bottom: calc(100% - 10px);
+        right: -30px;
+    }
+    80%{
+        bottom: -10px;
+        right: -30px;
+    }
+    100% {
+        bottom: -10px;
+        right: 20%;
+    }
+
+    
+}
